nav on mobiles fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -101,7 +101,7 @@ button{
 
 .wrapper{
   margin: auto;
-  width: 100%;
+  width: 100vw;
 }
 
 .container{
@@ -111,8 +111,8 @@ button{
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 /*
@@ -207,6 +207,9 @@ nav .logo{
   font-family: Manners;
   display: flex;
   align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0px;
 }
 nav .tabs{
   display: flex;
@@ -222,26 +225,23 @@ nav .links{
 /*nav open*/
 .nav-open{
   height: 100%;
-
   justify-content: center;
 }
 
-.nav-open .wrapper{
+.nav-open .nav-wrapper{
   margin: auto;
   flex-direction: column;
   justify-content: center;
-  
 }
 .nav-open .logo{
-  margin: auto;
-  margin-bottom: 0;
-  margin-top: 0;
+
 }
 .nav-open .tabs{
   height: auto;
   flex-direction: column;
   margin-top: 30px;
   margin-bottom: 40px;
+  
 }
 .nav-open .tabs button{
   padding-top: 10px;
@@ -703,7 +703,16 @@ main{
 
   nav .wrapper{
     width: 90%;
-  }  
+  } 
+  
+  nav .logo{
+    left: 10px;
+  }
+
+  .btn-burger{
+    right: 10px;
+  }
+  
 }
 
 
